objects/CustomerRSPProfiles__c.object
<CustomObject>
    <fields>
        <fullName>AN8__c</fullName>
        <label>AN8</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canal__c</fullName>
        <label>canal</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codigo_bandeira__c</fullName>
        <label>codigo_bandeira</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codigo_organizacao__c</fullName>
        <label>codigo_organizacao</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profile_code__c</fullName>
        <label>profile_code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profile_id__c</fullName>
        <externalId>true</externalId>
        <label>profile_id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uf_an8__c</fullName>
        <label>uf_an8</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version_id__c</fullName>
        <label>version_id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CustomerRSPProfiles</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AN8__c</columns>
        <columns>canal__c</columns>
        <columns>codigo_bandeira__c</columns>
        <columns>codigo_organizacao__c</columns>
        <columns>profile_code__c</columns>
        <columns>profile_id__c</columns>
        <columns>uf_an8__c</columns>
        <columns>version_id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <label>Nome da CustomerRSPProfiles</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomerRSPProfiles</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>